--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta content="Kylie Ying portfolio Website" name="description">
+    <meta content="Faysal Mahmud portfolio Website" name="description">
     <meta name="google" content="notranslate" />
-    <meta content="Kylie Ying" name="author">
+    <meta content="Faysal Mahmud" name="author">
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -55,10 +55,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <p>Inspired by dank memes and big dreams :')</p>
+                    <p>Inspired big dreams ㄟ( ▔, ▔ )ㄏ</p>
                 </div>
                 <div class="col-xs-12">
-                    <p>© Kylie Ying 2022</p>
+                    <p>© Faysal Mahmud 2026</p>
                 </div>
             </div>
         </div>
