--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <p>Inspired big dreams ㄟ( ▔, ▔ )ㄏ</p>
+                    <p>Inspired by big dreams ㄟ( ▔, ▔ )ㄏ</p>
                 </div>
                 <div class="col-xs-12">
                     <p>© Faysal Mahmud 2026</p>
