--- a/css/default.css
+++ b/css/default.css
@@ -3806,7 +3806,7 @@ body.minimal{
     font-weight:900
 }
 .hero-full-container .hero-full-wrapper{
-    display:table;
+    display:flex;
     width:100%;
     height:90vh;
     min-height:90vh
